@@ -87,10 +87,12 @@ QString commandsClass::makeBASHCliLine(QString qline)
 	else
 		whatin="fv";
 
+	errop<<data<<Qt::endl;
 	while(j<data.length())
 		{
 			if(data.at(j).toLatin1()=='\'')
 				{
+				errop<<data.at(j).toLatin1();
 					formatstr+="'";
 					j++;
 					while(data.at(j).toLatin1()!='\'')
@@ -102,6 +104,7 @@ QString commandsClass::makeBASHCliLine(QString qline)
 					j++;
 					continue;
 				}
+errop<<""<<Qt::endl;
 			if(data.at(j).toLatin1()=='"')
 				{
 					formatstr+="\\\"";
@@ -173,7 +176,10 @@ QString commandsClass::makeExternalCommand(QString qline)
 		return("");
 
 	tstr=this->makeBASHCliLine(qline);
-	return("procsub2("+tstr+")");
+	if(isInFunction==true)
+		return("ss<<procsub("+tstr+")<<Qt::endl");
+	else
+		return("procsub2("+tstr+")");
 }
 
 QString commandsClass::makeFunctionDefine(QString qline)
@@ -805,8 +811,9 @@ QString commandsClass::makeCase(QString qline)
 	QRegularExpression		re;
 	QRegularExpressionMatch	match;
 	parseFileClass			pfl;
-
+errop<<"000000000"<<Qt::endl;
 	re.setPattern("^[[:space:]]*?(case)[[:space:]]+(.*)[[:space:]]+in[[:space:]]*$");
+	//re.setPattern("(.*)\\)[[:space:]]*$");
 	match=re.match(qline);
 	if(match.hasMatch())
 		{
@@ -824,7 +831,8 @@ QString commandsClass::makeCaseCompareStatement(QString qline)
 	QRegularExpressionMatch	match;
 	parseFileClass			pfl;
 
-	re.setPattern("[[:space:]]*(.*)[[:space:]]*\\)[[:space:]]*");
+	//re.setPattern("[[:space:]]*(.*)[[:space:]]*\\)[[:space:]]*");
+	re.setPattern("(.*)\\)[[:space:]]*$");
 	match=re.match(qline);
 	if(match.hasMatch())
 		{
